@@ -450,6 +450,20 @@ public class CollisionBox extends Rectangle implements CollisionShape {
 		notifySizeChangeListeners();
 		return this;
 	}
+	
+	@Override
+	public void setRadius(float radius) {
+		super.setRadius(radius);
+		interpolate = true;
+		notifySizeChangeListeners();
+	}
+	
+	@Override
+	public void scale(float scale) {
+		super.scale(scale);
+		interpolate = true;
+		notifySizeChangeListeners();
+	}
 
 	public int getRenderX() {
 		return renderX;
