@@ -22,6 +22,7 @@ import com.badlogic.gdx.math.Vector2;
 public abstract class Shape {
 	/**
 	 * Returns an exact copy of this {@link Shape}
+	 * 
 	 * @return A copy (new) instance of this {@link Shape}
 	 */
 	public abstract Shape copy();
@@ -45,10 +46,12 @@ public abstract class Shape {
 	 * @return True if this {@link Shape} contains the specified {@link Vector2}
 	 */
 	public abstract boolean contains(Vector2 vector2);
-	
+
 	/**
 	 * Returns if a {@link Shape} is contained inside this {@link Shape}
-	 * @param shape The {@link Shape} to check
+	 * 
+	 * @param shape
+	 *            The {@link Shape} to check
 	 * @return True if this {@link Shape} contains the specified {@link Shape}
 	 */
 	public abstract boolean contains(Shape shape);
@@ -75,64 +78,90 @@ public abstract class Shape {
 	 * @return True if this {@link Shape} intersects the line segment
 	 */
 	public abstract boolean intersectsLineSegment(Vector2 pointA, Vector2 pointB);
-	
+
 	/**
 	 * Returns if this {@link Shape} intersects a line segment
 	 * 
-	 * @param x1 The x coordinate of the first point
-	 * @param y1 The y coordinate of the first point
-	 * @param x2 The x coordinate of the second point
-	 * @param y2 The y coordinate of the second point
+	 * @param x1
+	 *            The x coordinate of the first point
+	 * @param y1
+	 *            The y coordinate of the first point
+	 * @param x2
+	 *            The x coordinate of the second point
+	 * @param y2
+	 *            The y coordinate of the second point
 	 * @return True if this {@link Shape} intersects the line segment
 	 */
 	public abstract boolean intersectsLineSegment(float x1, float y1, float x2, float y2);
-	
+
 	/**
 	 * Returns if this {@link Shape} intersects another {@link Shape}
-	 * @param shape The {@link Shape} to check
+	 * 
+	 * @param shape
+	 *            The {@link Shape} to check
 	 * @return True if this {@link Shape} intersects the specified {@link Shape}
 	 */
 	public abstract boolean intersects(Shape shape);
-	
+
 	/**
 	 * Returns the distance from this {@link Shape} to a set of coordinates
-	 * @param x The x coordinate
-	 * @param y The y coordinate
+	 * 
+	 * @param x
+	 *            The x coordinate
+	 * @param y
+	 *            The y coordinate
 	 * @return The distance
 	 */
 	public abstract float getDistanceTo(float x, float y);
-	
+
 	/**
 	 * Returns the rotation of this {@link Shape}
+	 * 
 	 * @return The rotation in degrees
 	 */
 	public abstract float getRotation();
-	
+
 	/**
-	 * Sets the rotation of this {@link Shape} with its first point as the origin
-	 * @param degrees The rotation in degrees
+	 * Sets the rotation of this {@link Shape} with its first point as the
+	 * origin
+	 * 
+	 * @param degrees
+	 *            The rotation in degrees
 	 */
 	public abstract void setRotation(float degrees);
-	
+
 	/**
-	 * Sets the rotation of this {@link Shape} with a specified point as the origin
-	 * @param originX The origin/center x coordinate
-	 * @param originY The origin/center y coordinate
-	 * @param degrees The rotation in degrees
+	 * Sets the rotation of this {@link Shape} with a specified point as the
+	 * origin
+	 * 
+	 * @param originX
+	 *            The origin/center x coordinate
+	 * @param originY
+	 *            The origin/center y coordinate
+	 * @param degrees
+	 *            The rotation in degrees
 	 */
 	public abstract void setRotationAround(float originX, float originY, float degrees);
-	
+
 	/**
-	 * Rotates this {@link Shape} by a specified amount of degrees with its first point as the origin
-	 * @param degrees The rotation in degrees
+	 * Rotates this {@link Shape} by a specified amount of degrees with its
+	 * first point as the origin
+	 * 
+	 * @param degrees
+	 *            The rotation in degrees
 	 */
 	public abstract void rotate(float degrees);
-	
+
 	/**
-	 * Rotates this {@link Shape} by a specified amount of degrees around a specified point
-	 * @param originX The origin/center x coordinate
-	 * @param originY The origin/center y coordinate
-	 * @param degrees The rotation in degrees
+	 * Rotates this {@link Shape} by a specified amount of degrees around a
+	 * specified point
+	 * 
+	 * @param originX
+	 *            The origin/center x coordinate
+	 * @param originY
+	 *            The origin/center y coordinate
+	 * @param degrees
+	 *            The rotation in degrees
 	 */
 	public abstract void rotateAround(float originX, float originY, float degrees);
 
@@ -167,6 +196,22 @@ public abstract class Shape {
 	public abstract float getY();
 
 	/**
+	 * Returns the center x coordinate of this object. Note for {@link Circle}
+	 * this is the same as x.
+	 * 
+	 * @return 0 by default
+	 */
+	public abstract float getCenterX();
+
+	/**
+	 * Returns the center y coordinate of this object. Note for {@link Circle}
+	 * this is the same as y.
+	 * 
+	 * @return 0 by default
+	 */
+	public abstract float getCenterY();
+
+	/**
 	 * Sets the x coordinate of this object
 	 * 
 	 * @param x
@@ -191,27 +236,50 @@ public abstract class Shape {
 	 *            The y coordinate
 	 */
 	public abstract void set(float x, float y);
+
+	/**
+	 * Sets the radius of this shape. For {@link Polygon} shapes, this will
+	 * stretch in/out the shape from its center. Note that {@link Polygon}s must
+	 * be equilateral.
+	 * 
+	 * @param radius
+	 *            The radius in pixels
+	 */
+	public abstract void setRadius(float radius);
 	
 	/**
+	 * Scales the radius of this shape. For {@link Polygon} shapes, this will
+	 * stretch in/out the shape from its center. Note that {@link Polygon}s must
+	 * be equilateral.
+	 * 
+	 * @param scale The amount to scale by (e.g. 2.0 = double the size)
+	 */
+	public abstract void scale(float scale);
+
+	/**
 	 * Returns the left-most x coordinate
+	 * 
 	 * @return
 	 */
 	public abstract float getMinX();
-	
+
 	/**
 	 * Returns the top-most y coordinate
+	 * 
 	 * @return
 	 */
 	public abstract float getMinY();
-	
+
 	/**
 	 * Returns the right-most x coordinate
+	 * 
 	 * @return
 	 */
 	public abstract float getMaxX();
-	
+
 	/**
 	 * Returns the bottom-most y coordinate
+	 * 
 	 * @return
 	 */
 	public abstract float getMaxY();
@@ -240,15 +308,17 @@ public abstract class Shape {
 	 * @return The {@link EdgeIterator}
 	 */
 	public abstract EdgeIterator edgeIterator();
-	
+
 	/**
 	 * Returns if this {@link Shape} is a {@link Circle}
+	 * 
 	 * @return True if this {@link Shape} is a {@link Circle}
 	 */
 	public abstract boolean isCircle();
-	
+
 	/**
 	 * Returns the {@link Polygon} representing this {@link Shape}
+	 * 
 	 * @return Null if this {@link Shape} is a {@link Circle}
 	 */
 	public abstract Polygon getPolygon();
