@@ -1,4 +1,10 @@
 [1.4.4-SNAPSHOT]
+- Added additional methods to geometry classes
+-- Shape#getCenterX + Shape#getCenterY
+-- Shape#scale
+-- Shape#setRadius
+-- Polygon#isEquilateral
+-- LineSegment#getLength
 - Added methods to preset singletons and prototypes for dependency injection
 - Added @PostInject annotation to trigger methods after dependency injection
 - @Autowired dependencies now also inject into super classes
